<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchJob.JobPostingActivity">

    <android.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Job Title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="All"
            android:id="@+id/allFilter"
            android:background="@color/colorPrimary"
            android:onClick="allFilterTapped"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/distanceList"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />
        <Spinner
            android:id="@+id/durationList"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />
        <Spinner
            android:id="@+id/dayPostedList"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/jobTagList"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/minimumWage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/maximumWage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown" />


    </LinearLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/page_title"-->
    <!--        android:layout_width="164dp"-->
    <!--        android:layout_height="28dp"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:text="Search Job Posting"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.162"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/see_all_jobs"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="See All Jobs"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/page_title"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/page_title"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->

    <ListView
        android:id="@+id/jobListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>