...
        android:layout_marginTop="24dp"
        android:text="My Preference"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_posting"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/employeeJobBoard"
        android:layout_width="186dp"
        android:layout_height="53dp"
...
